<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PictureLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sort_name">按名称排序</string>
    <string name="grid_item_description">grid</string>
    <string name="sort_date">按修改日期排序</string>
    <string name="reco_image">识图</string>
    <string name="same_image">相同图片</string>
    <string name="simi_image">相似图片</string>
    <string name="you_may_find">您要找的可能是:</string>
<<<<<<< HEAD
    <string name="action_media">媒体</string>
    <string name="activity_camera">拍照</string>
    <string name="activity_recorder">录像</string>
=======
    <string name="search">搜索</string>
>>>>>>> a65bcde83e5eff73e4e5b376cfdccd241e52eeb6

</resources>